fix: spacing is made uniform for all auth pages

--- a/style.css
+++ b/style.css
@@ -369,23 +369,25 @@ body {
     /* overflow: hidden; */
 }
 
-.img-box .image-container {
+.deals-section .img-box .image-container {
     width: 372px;
     height: 486px;
     /* object-fit: contain; */
 }
 
-.image-container:first-child {
+.deals-section .image-container:first-child {
     width: 408px;
     height: 585px;
 }
 
-.image-container img {
+.deals-section .image-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: start;
 }
+
+
 
 .deals-section {
     position: relative;
@@ -423,6 +425,7 @@ body {
 .dot-wrapper.active .btn {
     background-color: black;
 }
+
 
 .new-arrivals-section {
     margin-block: 120px 150px;
@@ -1440,7 +1443,7 @@ footer p {
     /* background-color: red; */
     border-radius: 0 30px 30px 0;
     display: flex;
-    gap: 100px;
+    gap: 172px;
     border: 1px solid #dbdbdb;
     box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.1);
     /* border: 3px solid black; */
@@ -1467,7 +1470,7 @@ footer p {
 }
 
 .confirm-section .text h1 {
-    margin-top: 60px;
+    margin-top: 100px;
     font-size: 52px;
     font-family: var(--fontFamily-volkhov);
     color: #484848;
@@ -1477,13 +1480,13 @@ footer p {
 .confirm-section .text h3 {
     font-size: 26px;
     font-family: var(--fontFamily-volkhov);
-    margin-top: 180px;
-    color: #000;
+    margin-top: 70px;
+    color: #484848;
 }
 
 
 .confirm-section .text .input-line {
-    width: 630px;
+    width: 530px;
     margin-top: 56px;
 }
 
@@ -1501,10 +1504,10 @@ footer p {
     font-size: 16px;
     font-weight: 500;
     border-radius: 10px;
-    width: 500px;
+    width: 400px;
     padding-block: 15px;
     margin-left: 64px;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 
@@ -1514,7 +1517,7 @@ footer p {
     margin-top: 30px;
     font-size: 16px;
     letter-spacing: 1.28px;
-    margin-left: 64px;
+    margin-left: 46px;
 }
 
 .confirm-section a {
@@ -1542,7 +1545,7 @@ footer p {
     /* background-color: red; */
     border-radius: 0 30px 30px 0;
     display: flex;
-    gap: 100px;
+    gap: 172px;
     border: 1px solid #dbdbdb;
     box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.1);
     /* border: 3px solid black; */
@@ -1569,7 +1572,7 @@ footer p {
 }
 
 .new-password-section .text h1 {
-    margin-top: 60px;
+    margin-top: 100px;
     font-size: 52px;
     font-family: var(--fontFamily-volkhov);
     color: #484848;
@@ -1579,8 +1582,8 @@ footer p {
 .new-password-section .text h3 {
     font-size: 26px;
     font-family: var(--fontFamily-volkhov);
-    margin-top: 180px;
-    color: #000;
+    margin-top: 70px;
+    color: #484848;
 }
 
 
@@ -1595,7 +1598,7 @@ footer p {
 }
 
 .new-password-section .text .input-line input {
-    width: 100%;
+    width: 80%;
     font-size: 24px;
     color: #9d9d9d;
     border-bottom: 1px solid #9d9d9d;
@@ -1608,10 +1611,10 @@ footer p {
     font-size: 16px;
     font-weight: 550;
     border-radius: 10px;
-    width: 500px;
+    width: 400px;
     padding-block: 15px;
-    margin-left: 64px;
-    margin-top: 30px;
+    margin-left: 54px;
+    margin-top: 50px;
 }
 
 
@@ -2273,6 +2276,11 @@ footer p {
     align-items: center;
     justify-content: space-around;
     border: 1px solid #eee;
+}
+
+.shop-section .quantity-section .amount-container div {
+    font-size: 16px;
+    line-height: 24px;
 }
 
 .shop-section .quantity-section .add-cart-btn {
